--- a/index.css
+++ b/index.css
@@ -12,6 +12,9 @@
     background-size: cover;
     position: relative;
 }
+.body{
+    background-color: #64636b;
+}
 
 nav {
     display: flex;
@@ -52,7 +55,7 @@ nav img{
 
 }
 .text-box{
-    width: 90%;
+    width: 100%;
     color: #fff;
     position: absolute;
     top: 50%;
@@ -62,7 +65,14 @@ nav img{
 }
 .text-box h1{
     font-family: 'Roboto Slab', serif;
-    font-size: 62px;
+    font-size: 52px;
+    
+}
+.text-box h4{
+    font-family: 'Roboto Slab', serif;
+    font-size: 30px;
+    text-align: left;
+    margin-left: 50px;
     
 }
 .text-box p{
@@ -102,6 +112,7 @@ nav img{
     background-color: transparent;
     position: relative;
     cursor: pointer;
+    background-color: white;
 }
 .cart-btn:hover{
     border: 1px solid #d67c15;
@@ -121,6 +132,7 @@ nav img{
     position: relative;
     cursor: pointer;
     padding-bottom: 10px;
+    background-color: white;
 }
 .buy-btn:hover{
     border: 1px solid #fd0f07;
@@ -131,7 +143,7 @@ nav img{
 .check-btn{
     display: inline-block;
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
     border: 1px solid rgb(23, 238, 3);
     padding: 12px 34px;
     font-family: 'Roboto Slab', serif;
@@ -140,6 +152,7 @@ nav img{
     position: relative;
     cursor: pointer;
     padding-top: 10px;
+    background-color: white;
 }
 .check-btn:hover{
     border: 1px solid #06d845;
@@ -191,10 +204,24 @@ nav .fa{
     text-align: center;
     padding-top: 100px;
 }
+.products h1{
+    font-family: 'Roboto Slab', serif;
+    font-size: 100px;
+    font-weight: 600;
+    color: rgb(248, 248, 248);
+    background-image: linear-gradient(rgba(7, 82, 180, 0.7),rgba(15, 48, 180, 0.7)),url(images/background.png);
+    background-size:auto;
+    text-align: center;
+    margin-top: 50px;
+}
 h1{
     font-family: 'Roboto Slab', serif;
     font-size: 100px;
     font-weight: 600;
+    color: white;
+    text-align: center;
+    margin-top: 50px;
+    border-radius: 30px;
 }
 h2{
     font-family: 'Roboto Slab', serif;
@@ -221,11 +248,26 @@ p{
     line-height: 22px;
     padding: 10px;
 }
+
+.layer p, h3{
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 5%;
+    font-family: 'Roboto Slab', serif;
+    color:black;
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 30px;
+    text-align: left;
+    position: relative;
+    background-color: white;
+}
 .video video{
     width: 1920px;
     height: 700px;
-    border: 20px solid white;
     display: block;
+    padding: 50px;
 }
 .video h2{
     text-align: center;
@@ -237,11 +279,35 @@ p{
     padding: 8px 12px;
     position: relative;
 }
-
+.mainproducts-col{
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+}
+.mainproducts-col:hover{
+    border: 5px solid #ff1100;
+    background: #242323;
+    transition: 0.5s;
+}
+.mainproducts-col img{
+    width: 1000px;
+    height: 1000px;
+}
+.mainproducts-col p{
+    font-size: 40px;
+    margin: 5px;
+    text-align: center;
+    position: relative;
+    color: white;
+    background-color: #0f5be7;
+}
 .row{
     margin-top: 5%;
     display: flex;
     justify-content: space-evenly;
+    padding-bottom: 100px;
 }
 .products-col{
     flex-basis: 31%;
@@ -251,14 +317,15 @@ p{
     box-sizing: border-box;
 }
 .products-col:hover{
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 5px solid #ff1100;
+    background: #242323;
     transition: 0.5s;
 }
 .products-col img{
-    width: 1000px;
-    height: 700px;
+    width: 700px;
+    height: 800px;
 }
+
 
 
 .About {
@@ -354,12 +421,12 @@ input[type=text], select, textarea {
     border-radius: 4px; /* Rounded borders */
     box-sizing: border-box; /* Make sure that padding and width stays in place */
     margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
+    margin-bottom: 6px; /* Bottom margin */
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
   }
   
   /* Style the submit button with a specific background color etc */
-  input[type=submit] {
+    input[type=submit] {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
@@ -373,21 +440,68 @@ input[type=text], select, textarea {
     background-color: #45a049;
   }
   
+  .title{
+    background-image: linear-gradient(rgba(7, 82, 180, 0.7),rgba(15, 48, 180, 0.7)),url(images/background.png);
+    background-size:auto;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+ 
+  }
+  .title h2{
+    padding: 50px;
+  }
   /* Add a background color and some padding around the form */
   .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
+    text-align: left;
+    border-radius: 5px 12px;
+    padding: 10%;
+    background-color:none;
+    
+  }
+  .container h5{
+    color: black;
+    font-size: 30px;
+    text-align: left;
+
+    
+  }
+  .container p{
+    padding-bottom: 100px;
+    text-align: left;
+  }
+
+  .fcontainer{
+    text-align: center;
+  }
+ 
+  .feedback{    
+    text-align: left;
+    color: rgb(0, 0, 0);
+    margin: 20%;
+    border: none;
+    background-color: #ffffff;
+    font-size: 30px;
+  }
+  .feedbackbg{
+    background-color: #242323;
+    position: inherit;
   }
   .feedback h1{
-    padding-top: 200px;
+    color: rgb(255, 255, 255);
     text-align: center;
     font-size: 70px;
     border: none;
+
   }
   .feedback p{
-    padding-top: 100px;
-    font-size: 50px;
+    color: rgb(0, 0, 0);
+    font-size: 40px;
+    text-align: center;
+  }
+  .feedback h3{
+    font-size: 20px;
+    position: relative;
   }
 
   .fa:hover {
@@ -400,12 +514,16 @@ input[type=text], select, textarea {
 }
 
 .fa-instagram {
-    background: #cb2027;
-    color: white;
+    background: #ff0000; 
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    color: rgb(3, 3, 3);
 }
 
 .fa-twitter {
-    background: #ff5700;
+    background: #36d8ff; 
     color: white;
 }
 
@@ -417,12 +535,8 @@ input[type=text], select, textarea {
     margin: 5px 20px;
 }
 
-
-
 footer{
     height: 10vh;
-    bottom: 0;
-    position: relative;
     background-color: rgb(48, 48, 48);
     width: 100%;
     
